--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,7 +45,7 @@
 }
 
 .header__logo-text {
-    font-weight: 400;
+    font-weight: 800;
     font-size: 20px;
 }
 
@@ -81,13 +81,107 @@
 }
 
 
+.tech_spec {
+    background-color: grey;
+}
 
+.tech_spec__wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
 
+.tech_spec__description {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 20px 30px 30px 30px;
+    background: #090909;
+    opacity: 0.3;
+    border-radius: 30px;
+    width: 100%;
+    max-width: 410px;
+}
 
+.tech_spec__titles, .tech_spec__mission, .tech_spec__outfit {
+    margin-bottom: 24px;
+}
 
+.tech_spec__title {
+    font-weight: 800;
+    font-size: 30px;
+}
 
+.tech_spec__subtitle {
+    font-weight: 300;
+    font-size: 20px;
+    opacity: 0.4;
+}
 
+.tech_spec__text {
+    font-weight: 800;
+    font-size: 18px;
+    margin-bottom: 12px;
+}
 
+.tech_spec__text-descr {
+    font-weight: 300;
+    font-size: 16px;
+}
+
+.tech_spec__outfit-list {
+    display: flex;
+    flex-wrap: wrap;
+    /*justify-content: space-between;*/
+    align-items: center;
+}
+
+.tech_spec__outfit-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.tech_spec__outfit-img {
+    position: relative;
+    width: 80px;
+    height: 65px;
+    border: 1px solid #FFFFFF;
+    border-radius: 6px;
+    /*margin-bottom: 4px;*/
+}
+
+.tech_spec__outfit-img img {
+    display: block;
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.tech_spec__outfit-text {
+    font-weight: 700;
+    font-size: 9px;
+}
+
+.tech_spec__btn {
+    padding: 14px 12px;
+    border: 1px solid #FFFFFF;
+    border-radius: 10px;
+    color: white;
+    font-weight: 300;
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tech_spec__btn span {
+    color: white;
+    font-weight: 300;
+    font-size: 14px;
+    margin-right: 12px;
+}
 
 
 
