--- a/src/style/style.css
+++ b/src/style/style.css
@@ -122,6 +122,20 @@
     max-width: 410px;
 }
 
+/* CSS стили для анимации */
+.tech_spec__visible {
+    opacity: 1;
+    height: auto;
+    pointer-events: auto; /* Включаем обработку событий мыши по умолчанию */
+    overflow: hidden; /* Скрываем содержимое, которое не помещается в высоту блока */
+    max-height: 1000px; /* Максимальная высота блока */
+    transition: opacity 0.5s ease, max-height 0.5s cubic-bezier(0.5, 0.5, 0.5, 0.5);
+}
+.tech_spec__visible.hidden {
+    opacity: 0;
+    max-height: 0; /* Устанавливаем максимальную высоту блока на 0 */
+}
+
 .tech_spec__titles, .tech_spec__mission {
     margin-bottom: 24px;
 }
@@ -155,7 +169,7 @@
 .tech_spec__outfit-list {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .tech_spec__outfit-item {
@@ -211,6 +225,15 @@
     margin-right: 12px;
 }
 
+.tech_spec__btn img {
+    transition: transform 0.3s ease;
+    transform: rotate(180deg);
+}
+
+.tech_spec__btn img.rotate {
+    transform: rotate(0);
+}
+
 .tech_spec__interior {
     max-width: 200px;
     width: 100%;
@@ -231,7 +254,6 @@
     justify-content: space-between;
     max-width: 80px;
     width: 100%;
-    /*margin-top: auto;*/
 }
 
 .tech_spec__interior-text {
@@ -265,7 +287,18 @@
 /*auto_park*/
 
 .auto_park {
-    background-color: black;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 60px;
+    transition: transform 0.3s ease;
+    transform: translateY(100%);
+}
+
+.auto_park .container {
+    position: relative;
+    z-index: 1;
 }
 
 .auto_park_wrapper {
@@ -282,10 +315,95 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.auto_park__control img {
+    transition: transform 0.3s ease;
+    transform: rotate(180deg);
+}
+
+.auto_park__control img.rotate {
+    transform: rotate(0);
 }
 
 .auto_park__title {
     font-weight: 800;
     font-size: 20px;
     color: #FFFFFF;
+}
+
+.auto_park_slider {
+    position: relative;
+}
+
+.auto_park_slider-overflow{
+    overflow: hidden;
+}
+
+.auto_park_slider-wrapper {
+    display: flex;
+    transition: transform 0.3s ease;
+}
+
+.gallery_item {
+    cursor: pointer;
+    margin: 0 2px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid #090909;
+    transition: transform 0.3s ease;
+}
+
+.gallery_item:hover {
+    border: 1px solid #62A744;
+}
+
+.gallery_item:hover img {
+    filter: grayscale(0);
+}
+
+.gallery_item img {
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: transform 0.3s ease;
+}
+
+.auto_park_slider-button {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 210px;
+    width: 100%;
+    visibility: hidden;
+}
+
+.auto_park_slider-button button {
+    width: 24px;
+    height: 24px;
+    border-radius: 8px;
+    border: 1px solid #FFFFFF;
+    background: #090909;
+    cursor: pointer;
+    position: relative;
+}
+
+.auto_park_slider-button button img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.auto_park_slider-button button.prev_button {
+    right: 288%;
+}
+
+.auto_park_slider-button button.next_button {
+    transform: rotate(180deg);
+    left: 288%;
 }
