--- a/src/style/style.css
+++ b/src/style/style.css
@@ -99,8 +99,9 @@
 /*tech_spec*/
 
 .tech_spec {
-    /*width: 100vh;*/
-    background: black;
+    position: absolute;
+    z-index: 1;
+    width: -webkit-fill-available;
 }
 
 .tech_spec__wrapper {
@@ -108,6 +109,10 @@
     justify-content: space-between;
     align-items: flex-start;
     opacity: 1;
+}
+
+.tech_spec__description.hidden, .auto_park_wrapper.hidden {
+    visibility: hidden;
 }
 
 .tech_spec__description {
@@ -291,6 +296,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 1;
     margin-bottom: 60px;
     transition: transform 0.3s ease;
     transform: translateY(100%);
