--- a/src/style/style.css
+++ b/src/style/style.css
@@ -104,15 +104,20 @@
     width: -webkit-fill-available;
 }
 
-.tech_spec__wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    opacity: 1;
+.tech_spec .container {
+    position: relative;
 }
 
-.tech_spec__description.hidden, .auto_park_wrapper.hidden {
-    visibility: hidden;
+.tech_spec__wrapper {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: absolute;
+    /*opacity: 1;*/
+}
+
+.tech_spec__description.hidden, .auto_park_wrapper.hidden, .auto_park_slider-button button.hidden {
+    visibility: hidden !important;
 }
 
 .tech_spec__description {
@@ -205,9 +210,9 @@
 }
 
 .tech_spec__outfit-text {
-    font-weight: 700;
-    font-size: 9px;
-    line-height: 11px;
+    font-weight: 300;
+    font-size: 10px;
+    line-height: 12px;
 }
 
 .tech_spec__btn {
@@ -240,6 +245,8 @@
 }
 
 .tech_spec__interior {
+    position: absolute;
+    right: 0;
     max-width: 200px;
     width: 100%;
     height: 124px;
