--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,6 +25,7 @@
 .go_to, .interior {
     padding: 20px 20px;
     color: black;
+    font-family: 'MoscowSans', sans-serif;
     font-weight: bold;
     cursor: pointer;
 }
@@ -56,6 +57,7 @@
 }
 
 .header__logo-text {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 20px;
 }
@@ -75,11 +77,13 @@
 }
 
 .header__info-text {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 16px;
 }
 
 .header__info-text:last-child {
+    font-family: 'MoscowSans', sans-serif;
     margin-top: 4px;
     font-weight: 300;
     font-size: 12px;
@@ -113,6 +117,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     position: absolute;
+    left: -22px;
     /*opacity: 1;*/
 }
 
@@ -151,29 +156,38 @@
 }
 
 .tech_spec__title {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 30px;
+    margin-bottom: 4px;
 }
 
 .tech_spec__subtitle {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 20px;
     opacity: 0.4;
 }
 
 .tech_spec__text {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 18px;
     margin-bottom: 12px;
 }
 
 .tech_spec__text-descr {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 16px;
 }
 
 .tech_spec__outfit {
     margin-bottom: 4px;
+}
+
+.tech_spec__outfit .tech_spec__text {
+    margin-bottom: 16px;
 }
 
 .tech_spec__outfit-list {
@@ -186,10 +200,12 @@
     max-width: 80px;
     width: 100%;
     margin-bottom: 20px;
+    text-align: center;
+    margin-right: 10px;
 }
 
-.tech_spec__outfit-item:not(:last-child) {
-    margin-right: 10px;
+.tech_spec__outfit-item:nth-child(4n+4) {
+    margin-right: 0;
 }
 
 .tech_spec__outfit-img {
@@ -210,8 +226,9 @@
 }
 
 .tech_spec__outfit-text {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
-    font-size: 10px;
+    font-size: 12px;
     line-height: 12px;
 }
 
@@ -220,6 +237,7 @@
     border: 1px solid #FFFFFF;
     border-radius: 10px;
     color: white;
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 14px;
     display: flex;
@@ -230,6 +248,7 @@
 
 .tech_spec__btn span {
     color: white;
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 14px;
     margin-right: 12px;
@@ -254,10 +273,14 @@
     align-items: flex-end;
     justify-content: flex-end;
     border-radius: 20px;
-    background: url("../img/layout/interior_prew.png") no-repeat center/cover;
+    background: url("../img/layout/amarok_prew.jpg") no-repeat center/cover;
     padding: 8px;
     cursor: pointer;
     margin-top: 20px;
+}
+
+.tech_spec__interior:hover .arrow-wrapper img {
+    margin-left: 3px;
 }
 
 .tech_spec__interior-btn {
@@ -269,6 +292,7 @@
 }
 
 .tech_spec__interior-text {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 300;
     font-size: 14px;
     margin-right: 4px;
@@ -293,6 +317,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: transform 0.3s ease;
 }
 
 
@@ -341,6 +366,7 @@
 }
 
 .auto_park__title {
+    font-family: 'MoscowSans', sans-serif;
     font-weight: 800;
     font-size: 20px;
     color: #FFFFFF;
@@ -368,11 +394,11 @@
     transition: transform 0.3s ease;
 }
 
-.gallery_item:hover {
+.gallery_item:hover, .gallery_item.active {
     border: 1px solid #62A744;
 }
 
-.gallery_item:hover img {
+.gallery_item:hover img, .gallery_item.active img {
     filter: grayscale(0);
 }
 
@@ -380,6 +406,9 @@
     object-fit: cover;
     filter: grayscale(100%);
     transition: transform 0.3s ease;
+    width: 210px;
+    height: 140px;
+    border-radius: 10px;
 }
 
 .auto_park_slider-button {
