--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,36 +8,36 @@
 
 /*control*/
 
-/*#hellopreloader>p {*/
-/*    display: none;*/
-/*}*/
-/*#hellopreloader_preload {*/
-/*    display: block;*/
-/*    position: fixed;*/
-/*    z-index: 99999;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    min-width: 320px;*/
-/*    background: #0E173E url(https://coddmac.store/Reka/oval.svg) center center no-repeat;*/
-/*    background-color: #000000;*/
-/*    background-size: 76px;*/
-/*}*/
+#hellopreloader>p {
+    display: none;
+}
+#hellopreloader_preload {
+    display: block;
+    position: fixed;
+    z-index: 99999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    min-width: 320px;
+    background: #0E173E url(https://coddmac.store/Reka/oval.svg) center center no-repeat;
+    background-color: #000000;
+    background-size: 76px;
+}
 
-/*#welcome-text {*/
-/*    font-family: 'MoscowSans', sans-serif;*/
-/*    font-size: 24px;*/
-/*    color: #62a744;*/
-/*    font-weight: 600;*/
-/*    width: 100%;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    position: absolute;*/
-/*    align-items: center;*/
-/*    top: 72px;*/
-/*    height: 100%;*/
-/*}*/
+#welcome-text {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 24px;
+    color: #62a744;
+    font-weight: 600;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    align-items: center;
+    top: 72px;
+    height: 100%;
+}
 
 .control_wrapper {
     width: 100%;
@@ -285,6 +285,7 @@
     font-weight: 300;
     font-size: 14px;
     margin-right: 12px;
+    transition: transform 0.3s ease;
 }
 
 .tech_spec__btn img {
@@ -296,9 +297,9 @@
     transform: rotate(0) scale(1);
 }
 
-/*.tech_spec__btn:hover img {*/
-/*    transform: scale(1.4) rotate(180deg);*/
-/*}*/
+.tech_spec__btn:hover {
+    background-color: #313131;
+}
 
 .tech_spec__interior {
     position: absolute;
