--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,35 +8,50 @@
 
 /*control*/
 
-#hellopreloader>p {
-    display: none;
-}
-#hellopreloader_preload {
-    display: block;
-    position: fixed;
-    z-index: 99999;
-    top: 0;
-    left: 0;
+/*Loader*/
+
+.progress-bar-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    min-width: 320px;
-    background: #0E173E url(https://coddmac.store/Reka/oval.svg) center center no-repeat;
-    background-color: #000000;
-    background-size: 76px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0);
+    z-index: 5;
 }
 
-#welcome-text {
+#progress-bar {
+    /*display: none;*/
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    border-radius: 10px; /* Задает круглые углы */
+    overflow: hidden; /* Скрывает прогресс за пределами полоски */
+    background-color: #62a744;
+    width: 30%;
+    margin-top: 0.5%;
+    margin-bottom: 0.5%;
+    height: 0.5%;
+}
+
+#progress-bar::-webkit-progress-bar {
+    background-color: white;
+}
+
+/*#progress-bar::-webkit-progress-value {*/
+/*    background-color: #62a744;*/
+/*}*/
+
+label {
+    color: #62a744;
     font-family: 'MoscowSans', sans-serif;
     font-size: 24px;
-    color: #62a744;
     font-weight: 600;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    align-items: center;
-    top: 72px;
-    height: 100%;
 }
 
 .control_wrapper {
