--- a/src/style/base.css
+++ b/src/style/base.css
@@ -16,3 +16,9 @@ body {
     padding: 0 5px;
     margin: 0 auto;
 }
+
+.container__content {
+    width: 100%;
+    padding: 0 5px;
+    margin: 0 60px;
+}
