--- a/src/style/style.css
+++ b/src/style/style.css
@@ -53,7 +53,10 @@ a-scene {
 /*header*/
 
 .header {
+    position: relative;
+    z-index: 1;
     background-color: #090909;
+
 }
 
 .header__wrapper, .header__logo, .header__info {
@@ -346,7 +349,7 @@ a-scene {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    transition: transform 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 
