--- a/src/style/media.css
+++ b/src/style/media.css
@@ -1,3 +1,181 @@
-@media (max-width: 1195px) {
+@media (max-width: 835px) {
+    .container {
+        margin: 0 40px;
+    }
 
+    .container__content {
+        margin: 0 10px;
+    }
+
+    .header .header__info {
+        justify-content: flex-end;
+    }
+
+    .header .header__info-descr {
+        display: none;
+    }
+
+    .tech_spec .tech_spec__wrapper {
+        margin-top: 50px;
+    }
+
+    .tech_spec .tech_spec__description {
+        max-width: 500px;
+    }
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__mission {
+        margin-bottom: 16px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item {
+        margin-bottom: 18px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit {
+        margin-bottom: 6px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__text {
+        font-size: 20px;
+    }
+
+    .tech_spec .tech_spec__interior {
+        margin-top: 70px;
+        margin-right: 50px;
+        max-width: 110px;
+        height: 70px;
+    }
+
+    .tech_spec .tech_spec__interior .tech_spec__interior-btn {
+        position: absolute;
+        top: 72px;
+        left: 0;
+    }
+
+    .tech_spec .tech_spec__interior .tech_spec__interior-btn .arrow-wrapper {
+        border: 1px solid #FFF;
+    }
+}
+
+@media (max-width: 391px) {
+    .container {
+        margin: 0 20px;
+        padding: 0;
+    }
+
+    .container__content {
+        margin: 0;
+        padding: 0;
+    }
+
+    .header .header__wrapper {
+        height: 60px;
+    }
+
+    .tech_spec .tech_spec__wrapper {
+        margin-top: 0;
+    }
+
+    .tech_spec .tech_spec__description {
+        padding: 20px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__title {
+        font-size: 24px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__subtitle {
+        font-size: 16px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__text {
+        font-size: 16px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__text-descr {
+        font-size: 14px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-list .tech_spec__outfit-item {
+        margin-bottom: 0;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit {
+        margin-bottom: 24px;
+    }
+
+    .tech_spec .tech_spec__interior {
+        max-width: 80px;
+        height: 50px;
+        margin: 0;
+        top: 628px;
+        left: 20px;
+    }
+
+    .tech_spec .tech_spec__interior .tech_spec__interior-btn {
+        top: 54px;
+    }
+
+    .auto_park .container {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:845px) and (orientation:landscape) {
+    .header .header__wrapper {
+        height: 60px;
+    }
+
+    .tech_spec .tech_spec__description {
+        max-width: none;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__btn {
+        position: absolute;
+        top: 190px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__titles .tech_spec__title {
+        font-size: 24px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__mission {
+        max-width: 313px;
+        margin-bottom: 40px;
+    }
+
+    .tech_spec .tech_spec__description .tech_spec__visible .tech_spec__outfit {
+        max-width: 440px;
+    }
+
+    .tech_spec .tech_spec__titles .tech_spec__subtitle, .tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text, .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__text {
+        font-size: 16px;
+    }
+
+    .tech_spec .tech_spec__visible .tech_spec__mission .tech_spec__text-descr {
+        font-size: 14px;
+    }
+
+    .tech_spec .tech_spec__visible .tech_spec__outfit .tech_spec__outfit-text {
+        font-size: 10px;
+    }
+
+    .tech_spec .tech_spec__interior {
+        max-width: 80px;
+        height: 50px;
+    }
+
+    .tech_spec .tech_spec__interior {
+        padding: 0;
+    }
+
+    .tech_spec .tech_spec__interior .tech_spec__interior-btn {
+        position: absolute;
+        top: 54px;
+    }
 }
