--- a/src/style/style.css
+++ b/src/style/style.css
@@ -143,8 +143,9 @@ a-scene {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 20px 30px 30px 30px;
-    background: rgba(9,9,9, 0.3);
+    padding: 20px 30px;
+    background: rgba(9, 9, 9, 0.50);
+    backdrop-filter: blur(6px);
     border-radius: 30px;
     width: 100%;
     max-width: 410px;
@@ -207,6 +208,7 @@ a-scene {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
+    gap: 10px;
 }
 
 .tech_spec__outfit-item {
@@ -214,11 +216,6 @@ a-scene {
     width: 100%;
     margin-bottom: 20px;
     text-align: center;
-    margin-right: 10px;
-}
-
-.tech_spec__outfit-item:nth-child(4n+4) {
-    margin-right: 0;
 }
 
 .tech_spec__outfit-img {
