--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -42,30 +42,30 @@
     padding: 5px 20px;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),
                 radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
-    transition: background-position 4s ease; /* Плавный переход при изменении позиции градиента */
-    animation: gradientAnimation 4s infinite linear;
+    transition: background-position 10s ease; /* Плавный переход при изменении позиции градиента */
+    animation: gradientAnimation 5s ease infinite;
 }
 
 @keyframes gradientAnimation {
     0% {
-        background: radial-gradient(50% 50% at 0% 0%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%);
+        background: radial-gradient(50% 50% at 0% 0%, #FC762B -50%, rgba(9, 9, 9, 0) 100%),
+                    radial-gradient(50% 50% at 100% 100%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);
     }
     25% {
-        background: radial-gradient(50% 50% at 0% 25%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 75%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%);
+        background: radial-gradient(50% 50% at 0% 25%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%),
+                    radial-gradient(50% 50% at 100% 75%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%);
     }
     50% {
-        background: radial-gradient(50% 50% at 0% 50%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 50%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
+        background: radial-gradient(50% 50% at 0% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
+                    radial-gradient(50% 50% at 100% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
     }
     75% {
-        background: radial-gradient(50% 50% at 0% 75%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 25%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
+        background: radial-gradient(50% 50% at 0% 75%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
+                    radial-gradient(50% 50% at 100% 25%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
     }
     100% {
-        background: radial-gradient(50% 50% at 0% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 0%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
+        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
+                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
     }
 }
 
