--- a/src/style/media.css
+++ b/src/style/media.css
@@ -81,6 +81,7 @@
 
     .tech_spec .tech_spec__wrapper {
         margin-top: 0;
+        width: 100%;
     }
 
     .tech_spec .tech_spec__description {
@@ -115,7 +116,7 @@
         max-width: 80px;
         height: 50px;
         margin: 0;
-        top: 628px;
+        top: 822px;
         left: 20px;
     }
 
