--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -43,8 +43,9 @@
     padding: 5px 20px;
     background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),
                 radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
-    transition: background-position 10s ease; /* Плавный переход при изменении позиции градиента */
-    animation: gradientAnimation 5s ease infinite;
+    /*transition: background-position 10s ease; !* Плавный переход при изменении позиции градиента *!*/
+    animation: gradientAnimation 10s ease infinite;
+    /*transition: transform 10s ease;*/
 }
 
 @keyframes gradientAnimation {
@@ -78,46 +79,65 @@
     overflow: hidden;
 }
 
-.progress-bar-container .image:after {
-    position: absolute;
-    content: ' ';
-    top: 40.5%;
-    /*left: 100%; !* Начальное положение справа *!*/
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 20px;
-    height: 28px;
-    background-color: #FCA82B;
-    box-shadow: 0 0 8px 2px rgb(252, 168, 43);
-    border-radius: 50%;
-    z-index: 10;
-    animation: blink 1.6s infinite; /* 0.3s + 0.3s + 0.4s = 1.6s */
+.progress-bar-container .image img {
+    animation: rotate-scale-translate 2s infinite ease-in-out;
 }
+
+@keyframes rotate-scale-translate {
+    0% {
+        transform: scale(1) rotateY(0deg);
+    }
+    50% {
+        transform: scale(0.5) rotateY(180deg);
+    }
+    100% {
+        transform: scale(1) rotateY(0deg);
+    }
+}
+
+
+
+
+/*.progress-bar-container .image:after {*/
+/*    position: absolute;*/
+/*    content: ' ';*/
+/*    top: 40.5%;*/
+/*    !*left: 100%; !* Начальное положение справа *!*!*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    width: 20px;*/
+/*    height: 28px;*/
+/*    background-color: #FCA82B;*/
+/*    box-shadow: 0 0 8px 2px rgb(252, 168, 43);*/
+/*    border-radius: 50%;*/
+/*    z-index: 10;*/
+/*    animation: blink 1.6s infinite; !* 0.3s + 0.3s + 0.4s = 1.6s *!*/
+/*}*/
 
 /*.progress-bar-container .image svg g {*/
 /*    overflow: hidden;*/
 /*}*/
 
-@keyframes blink {
-    0% {
-        /*left: 100%; !* Справа *!*/
-        opacity: 0; /* Скрытый */
-    }
-    30% {
-        /*left: calc(50%); !* Центр (24px / 2 - 20px / 2) *!*/
-        opacity: 1; /* Показывается */
-        animation-timing-function: ease-in;
-    }
-    70% {
-        /*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*/
-        opacity: 0; /* Показывается */
-        animation-timing-function: ease-out;
-    }
-    100% {
-        /*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*/
-        opacity: 0; /* Скрытый */
-    }
-}
+/*@keyframes blink {*/
+/*    0% {*/
+/*        !*left: 100%; !* Справа *!*!*/
+/*        opacity: 0; !* Скрытый *!*/
+/*    }*/
+/*    30% {*/
+/*        !*left: calc(50%); !* Центр (24px / 2 - 20px / 2) *!*!*/
+/*        opacity: 1; !* Показывается *!*/
+/*        animation-timing-function: ease-in;*/
+/*    }*/
+/*    70% {*/
+/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
+/*        opacity: 0; !* Показывается *!*/
+/*        animation-timing-function: ease-out;*/
+/*    }*/
+/*    100% {*/
+/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
+/*        opacity: 0; !* Скрытый *!*/
+/*    }*/
+/*}*/
 
 /*@keyframes gradient {*/
 /*    0% {*/
