--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -9,25 +9,6 @@
     background-color: rgba(0, 0, 0);
 }
 
-/*.progress-bar-container {*/
-/*    position: absolute;*/
-/*    z-index: 5;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    transform: translate(-50%, -50%);*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    padding: 5px 20px;*/
-/*    background: radial-gradient(var(--top-left-percentage) var(--top-left-percentage) at top left, #FC762B 0%, rgba(9, 9, 9, 0.3) 100%) no-repeat,*/
-/*    radial-gradient(var(--bottom-right-percentage) var(--bottom-right-percentage) at bottom right, #FC762B 0%, rgba(9, 9, 9, 0.3) 100%) no-repeat;*/
-/*    transition: background-position 0.5s ease; !* Плавный переход при изменении позиции градиента *!*/
-/*    animation: gradientAnimation 5s infinite;*/
-/*}*/
-
 .progress-bar-container {
     position: absolute;
     z-index: 5;
@@ -41,37 +22,33 @@
     justify-content: center;
     align-items: center;
     padding: 5px 20px;
-    background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),
-                radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);
-    /*transition: background-position 10s ease; !* Плавный переход при изменении позиции градиента *!*/
-    animation: gradientAnimation 10s ease infinite;
-    /*transition: transform 10s ease;*/
+    /*background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+    /*animation: gradientAnimation 10s ease infinite;*/
 }
 
-@keyframes gradientAnimation {
-    0% {
-        background: radial-gradient(50% 50% at 0% 0%, #FC762B -50%, rgba(9, 9, 9, 0) 100%),
-                    radial-gradient(50% 50% at 100% 100%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);
-    }
-    25% {
-        background: radial-gradient(50% 50% at 0% 25%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 75%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%);
-    }
-    50% {
-        background: radial-gradient(50% 50% at 0% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
-    }
-    75% {
-        background: radial-gradient(50% 50% at 0% 75%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 25%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
-    }
-    100% {
-        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),
-                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);
-    }
-}
-
-
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background: radial-gradient(50% 50% at 0% 0%, #FC762B -50%, rgba(9, 9, 9, 0) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 100%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);*/
+/*    }*/
+/*    25% {*/
+/*        background: radial-gradient(50% 50% at 0% 25%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 75%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    }*/
+/*    50% {*/
+/*        background: radial-gradient(50% 50% at 0% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    }*/
+/*    75% {*/
+/*        background: radial-gradient(50% 50% at 0% 75%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 25%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    }*/
+/*    100% {*/
+/*        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    }*/
+/*}*/
 
 .progress-bar-container .image {
     position: relative;
@@ -81,6 +58,12 @@
 
 .progress-bar-container .image img {
     animation: rotate-scale-translate 2s infinite ease-in-out;
+    margin-left: 5px;
+}
+
+.progress-bar-container .image-text {
+    color: #FFFFFF;
+    margin-top: 10px;
 }
 
 @keyframes rotate-scale-translate {
@@ -95,71 +78,6 @@
     }
 }
 
-
-
-
-/*.progress-bar-container .image:after {*/
-/*    position: absolute;*/
-/*    content: ' ';*/
-/*    top: 40.5%;*/
-/*    !*left: 100%; !* Начальное положение справа *!*!*/
-/*    left: 50%;*/
-/*    transform: translate(-50%, -50%);*/
-/*    width: 20px;*/
-/*    height: 28px;*/
-/*    background-color: #FCA82B;*/
-/*    box-shadow: 0 0 8px 2px rgb(252, 168, 43);*/
-/*    border-radius: 50%;*/
-/*    z-index: 10;*/
-/*    animation: blink 1.6s infinite; !* 0.3s + 0.3s + 0.4s = 1.6s *!*/
-/*}*/
-
-/*.progress-bar-container .image svg g {*/
-/*    overflow: hidden;*/
-/*}*/
-
-/*@keyframes blink {*/
-/*    0% {*/
-/*        !*left: 100%; !* Справа *!*!*/
-/*        opacity: 0; !* Скрытый *!*/
-/*    }*/
-/*    30% {*/
-/*        !*left: calc(50%); !* Центр (24px / 2 - 20px / 2) *!*!*/
-/*        opacity: 1; !* Показывается *!*/
-/*        animation-timing-function: ease-in;*/
-/*    }*/
-/*    70% {*/
-/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
-/*        opacity: 0; !* Показывается *!*/
-/*        animation-timing-function: ease-out;*/
-/*    }*/
-/*    100% {*/
-/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
-/*        opacity: 0; !* Скрытый *!*/
-/*    }*/
-/*}*/
-
-/*@keyframes gradient {*/
-/*    0% {*/
-/*        !*left: 100%; !* Справа *!*!*/
-/*        opacity: 0; !* Скрытый *!*/
-/*    }*/
-/*    30% {*/
-/*        !*left: calc(50%); !* Центр (24px / 2 - 20px / 2) *!*!*/
-/*        opacity: 1; !* Показывается *!*/
-/*        animation-timing-function: ease-in;*/
-/*    }*/
-/*    70% {*/
-/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
-/*        opacity: 0; !* Показывается *!*/
-/*        animation-timing-function: ease-out;*/
-/*    }*/
-/*    100% {*/
-/*        !*left: calc(-100% + 10px); !* Налево (-100% + 24px) *!*!*/
-/*        opacity: 0; !* Скрытый *!*/
-/*    }*/
-/*}*/
-
 #progress-label {
     color: #ffffff;
     font-family: 'MoscowSans', sans-serif;
@@ -169,7 +87,6 @@
 }
 
 #progress-bar {
-    /*display: none;*/
     position: relative;
     appearance: none;
     -webkit-appearance: none;
@@ -183,21 +100,6 @@
     margin-bottom: 18px;
     height: 6px;
 }
-
-/*#progress-bar:after {*/
-/*    content: '';*/
-/*    position: absolute;*/
-/*    right: 0;*/
-/*    left: 0;*/
-/*    top: 0;*/
-/*    bottom: 0;*/
-/*    width: 10px;*/
-/*    height: 10px;*/
-/*    border-radius: 10px;*/
-/*    background: #62A744;*/
-/*    box-shadow: 0 0 5px 1px rgba(98, 167, 68, 0.50);*/
-/*    z-index: 6;*/
-/*}*/
 
 #progress-bar::-webkit-progress-bar {
     background-color: white;
