--- a/src/style/base.css
+++ b/src/style/base.css
@@ -27,3 +27,9 @@ body {
     width: 100px !important;
     height: 50px !important;
 }
+
+/*#ar-permission-overlay {*/
+/*    background-color: rgba(0, 0, 0, 0.8) !important;*/
+/*    border: 1px solid white !important;*/
+/*    color: white !important;*/
+/*}*/
