--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -24,7 +24,14 @@
     padding: 5px 20px;
     /*background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
     /*            radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
-    /*animation: gradientAnimation 10s ease infinite;*/
+    /*animation: gradientAnimation 1.5s ease infinite;*/
+    /*transition: background-position 1.5s ease;*/
+    /*background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+    /*animation: gradientAnimation 1s ease-in-out infinite;*/
+    /*background-size: 100% 100%;*/
 }
 
 /*@keyframes gradientAnimation {*/
@@ -33,22 +40,205 @@
 /*                    radial-gradient(50% 50% at 100% 100%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);*/
 /*    }*/
 /*    25% {*/
-/*        background: radial-gradient(50% 50% at 0% 25%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                    radial-gradient(50% 50% at 100% 75%, #FC762B -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*        background: radial-gradient(50% 50% at 0% 25%, #FC762B -50%, rgba(9, 9, 9, 0) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 75%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);*/
 /*    }*/
 /*    50% {*/
-/*        background: radial-gradient(50% 50% at 0% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                    radial-gradient(50% 50% at 100% 50%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*        background: radial-gradient(50% 50% at 0% 50%, #62A744 -50%, rgba(9, 9, 9, 0) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 50%, #62A744 -50%, rgba(9, 9, 9, 0) 100%);*/
 /*    }*/
 /*    75% {*/
-/*        background: radial-gradient(50% 50% at 0% 75%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                    radial-gradient(50% 50% at 100% 25%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*        background: radial-gradient(50% 50% at 0% 75%, #62A744 -50%, rgba(9, 9, 9, 0) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 25%, #62A744 -50%, rgba(9, 9, 9, 0) 100%);*/
 /*    }*/
 /*    100% {*/
-/*        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0.00) 100%);*/
+/*        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0) 100%),*/
+/*                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0) 100%);*/
 /*    }*/
 /*}*/
+
+/*.progress-bar-container {*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    padding: 5px 20px;*/
+/*    background: radial-gradient(50% 50% at 0% 0%, #FC762B -50%, rgba(9, 9, 9, 0) 100%),*/
+/*    radial-gradient(50% 50% at 100% 100%, #FC762B -50%, rgba(9, 9, 9, 0) 100%);*/
+/*    background-size: 200% 200%;*/
+/*    animation: gradientAnimation 1s linear infinite;*/
+/*}*/
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-position: 0 0, 100% 100%;*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 100% 0, 0 100%;*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 0 0, 100% 100%;*/
+/*    }*/
+/*}*/
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-position: 0 100%;*/
+/*    }*/
+/*    25% {*/
+/*        background-position: 0 75%;*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 0 50%;*/
+/*    }*/
+/*    75% {*/
+/*        background-position: 0 25%;*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 0 0;*/
+/*    }*/
+/*}*/
+
+
+/*.progress-bar-container {*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    padding: 5px 20px;*/
+/*    overflow: hidden;*/
+/*    background-origin: border-box;*/
+/*}*/
+
+/*.progress-bar-container::before,*/
+/*.progress-bar-container::after {*/
+/*    content: "";*/
+/*    position: absolute;*/
+/*    display: block;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*                radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    animation: gradientAnimation 10s ease-in-out infinite;*/
+/*    transition: background-position 10s ease-in-out;*/
+/*}*/
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-position: 0 100%, 100% 0, 0 0, 100% 100%;*/
+/*    }*/
+/*    25% {*/
+/*        background-position: 0 75%, 100% 25%, 0 25%, 100% 75%;*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 0 50%, 100% 50%, 0 50%, 100% 50%;*/
+/*    }*/
+/*    75% {*/
+/*        background-position: 0 25%, 100% 75%, 0 75%, 100% 25%;*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 0 0, 100% 100%, 0 100%, 100% 0;*/
+/*    }*/
+/*}*/
+
+
+/*.progress-bar-container {*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    -webkit-transform: translate(-50%, -50%);*/
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    transform: translate(-50%, -50%);*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: -webkit-box;*/
+/*    display: -ms-flexbox;*/
+/*    display: flex;*/
+/*    -webkit-box-orient: vertical;*/
+/*    -webkit-box-direction: normal;*/
+/*    -ms-flex-direction: column;*/
+/*    flex-direction: column;*/
+/*    -webkit-box-pack: center;*/
+/*    -ms-flex-pack: center;*/
+/*    justify-content: center;*/
+/*    -webkit-box-align: center;*/
+/*    -ms-flex-align: center;*/
+/*    align-items: center;*/
+/*    padding: 5px 20px;*/
+/*    background: -o-radial-gradient(0 100%, 50% 50%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    -o-radial-gradient(100% 0, 50% 50%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    -o-radial-gradient(0 0, 50% 50%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    -o-radial-gradient(100% 100%, 50% 50%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
+/*    radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+/*    -webkit-animation: gradientAnimation 5s ease-in-out infinite;*/
+/*    animation: gradientAnimation 5s ease-in-out infinite;*/
+/*    -webkit-transition: background-position 5s ease-in-out;*/
+/*    -o-transition: background-position 5s ease-in-out;*/
+/*    transition: background-position 5s ease-in-out;*/
+/*}*/
+
+/*@-webkit-keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-position: 0 100%, 100% 0, 0 0, 100% 100%;*/
+/*    }*/
+/*    25% {*/
+/*        background-position: 0 75%, 100% 25%, 0 25%, 100% 75%;*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 0 50%, 100% 50%, 0 50%, 100% 50%;*/
+/*    }*/
+/*    75% {*/
+/*        background-position: 0 25%, 100% 75%, 0 75%, 100% 25%;*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 0 0, 100% 100%, 0 100%, 100% 0;*/
+/*    }*/
+/*}*/
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-position: 0 100%, 100% 0, 0 0, 100% 100%;*/
+/*    }*/
+/*    25% {*/
+/*        background-position: 0 75%, 100% 25%, 0 25%, 100% 75%;*/
+/*    }*/
+/*    50% {*/
+/*        background-position: 0 50%, 100% 50%, 0 50%, 100% 50%;*/
+/*    }*/
+/*    75% {*/
+/*        background-position: 0 25%, 100% 75%, 0 75%, 100% 25%;*/
+/*    }*/
+/*    100% {*/
+/*        background-position: 0 0, 100% 100%, 0 100%, 100% 0;*/
+/*    }*/
+/*}*/
+
+
+
+
+
 
 .progress-bar-container .image {
     position: relative;
