--- a/src/style/media.css
+++ b/src/style/media.css
@@ -1,3 +1,73 @@
+@media (hover: hover) {
+    /* Ваши стили для hover */
+    .tech_spec__btn:hover {
+        background-color: #313131;
+    }
+
+    .tech_spec__btn:hover img {
+        transform: rotate(180deg) scale(1.2) translateY(-2px);
+    }
+
+    .tech_spec__btn:hover img.rotate {
+        transform: rotate(0) scale(1.2) translateY(-2px);
+    }
+
+    .tech_spec__interior:hover .arrow-wrapper img {
+        margin-left: 3px;
+    }
+
+    .auto_park__control:hover img {
+        transform: rotate(180deg) scale(1.2) translateY(-4px);
+    }
+
+    .auto_park__control:hover img.rotate  {
+        transform: rotate(0) scale(1.2) translateY(-4px);
+    }
+
+    .gallery_item:hover, .gallery_item.active {
+        border: 1px solid #62A744;
+    }
+
+    .gallery_item:hover img, .gallery_item.active img {
+        filter: grayscale(0);
+    }
+}
+
+@media (hover: none) {
+    /* Ваши стили для hover */
+    .tech_spec__btn:active {
+        background-color: #313131;
+    }
+
+    .tech_spec__btn:active img {
+        transform: rotate(180deg) scale(1.2) translateY(-2px);
+    }
+
+    .tech_spec__btn:active img.rotate {
+        transform: rotate(0) scale(1.2) translateY(-2px);
+    }
+
+    .tech_spec__interior:active .arrow-wrapper img {
+        margin-left: 3px;
+    }
+
+    .auto_park__control:active img {
+        transform: rotate(180deg) scale(1.2) translateY(-4px);
+    }
+
+    .auto_park__control:active img.rotate  {
+        transform: rotate(0) scale(1.2) translateY(-4px);
+    }
+
+    .gallery_item:active, .gallery_item.active {
+        border: 1px solid #62A744;
+    }
+
+    .gallery_item:active img, .gallery_item.active img {
+        filter: grayscale(0);
+    }
+}
+
 @media (max-width: 1200px) {
     .tech_spec .tech_spec__description {
         padding: 10px 30px 10px 30px;
