--- a/src/style/media.css
+++ b/src/style/media.css
@@ -68,6 +68,18 @@
     }
 }
 
+@media (hover: hover) and (max-width: 576px), (hover: hover) and (min-width:320px) and (max-width:900px) and (orientation:landscape) {
+    .tech_spec__interior-btn:hover {
+        background-color: #313131;
+    }
+}
+
+@media (hover: none) and (max-width: 576px), (hover: none) and (min-width:320px) and (max-width:915px) and (orientation:landscape) {
+    .tech_spec__interior-btn:active {
+        background-color: #313131;
+    }
+}
+
 @media (max-width: 1200px) {
     .tech_spec .tech_spec__description {
         padding: 10px 30px 10px 30px;
@@ -138,8 +150,6 @@
         height: 70px;
     }
 
-
-
     .tech_spec__interior .tech_spec__interior-btn .arrow-wrapper {
         border: 1px solid #FFF;
     }
@@ -198,24 +208,53 @@
     }
 
     .tech_spec__interior {
-        max-width: 80px !important;
-        height: 50px !important;
+        /*max-width: 80px !important;*/
+        /*height: 50px !important;*/
         margin: 0 !important;
         left: 20px !important;
-        bottom: 112px !important;
+        bottom: 72px !important;
+        background: none !important;
+        pointer-events: none;
     }
 
     .tech_spec__interior .tech_spec__interior-btn {
-        top: 54px !important;
-    }
-    .tech_spec__interior .tech_spec__interior-btn {
         position: absolute;
+        width: 100%;
+        max-width: fit-content;
         top: 75px;
         left: 0;
+        backdrop-filter: blur(6px);
+        border: 1px solid white;
+        padding: 10px 12px;
+        border-radius: 10px;
+        pointer-events: all;
+    }
+
+    .tech_spec__interior .tech_spec__interior-btn .tech_spec__interior-text {
+        margin-right: 8px;
+    }
+
+    .tech_spec__interior .tech_spec__interior-btn .arrow-wrapper {
+        border: none;
+        background: none;
     }
 
     .auto_park .container {
         margin: 0 !important;
+    }
+
+    .auto_park .auto_park_wrapper {
+        height: auto;
+        padding: 20px 20px 40px 20px;
+    }
+
+    .auto_park .auto_park_wrapper .auto_park_slider .gallery_item img {
+        width: 140px;
+        height: 92px;
+    }
+
+    .auto_park_slider-button button.next_button, .auto_park_slider-button button.prev_button {
+        bottom: 38px !important;
     }
 }
 
@@ -229,7 +268,7 @@
     }
 }
 
-@media screen and (min-width:320px) and (max-width:900px) and (orientation:landscape) {
+@media screen and (min-width:320px) and (max-width:915px) and (orientation:landscape) {
     .container {
         margin: 0 15px;
     }
@@ -310,27 +349,68 @@
         margin-bottom: 0;
     }
 
-    .tech_spec__interior {
-        max-width: 80px !important;
-        height: 50px !important;
-        /*z-index: -1;*/
-    }
+    /*.tech_spec__interior {*/
+    /*    max-width: 80px !important;*/
+    /*    height: 50px !important;*/
+    /*    !*z-index: -1;*!*/
+    /*}*/
+
+    /*.tech_spec__interior {*/
+    /*    padding: 0 !important;*/
+    /*}*/
+
+    /*.tech_spec__interior .tech_spec__interior-btn {*/
+    /*    position: absolute !important;*/
+    /*    top: 54px !important;*/
+    /*}*/
+
+
 
     .tech_spec__interior {
         padding: 0 !important;
+        margin: 0 !important;
+        /*left: 20px !important;*/
+        /*bottom: 112px !important;*/
+        background: none !important;
+        pointer-events: none;
     }
 
     .tech_spec__interior .tech_spec__interior-btn {
-        position: absolute !important;
-        top: 54px !important;
+        position: absolute;
+        width: 100%;
+        max-width: fit-content;
+        top: 20px;
+        right: 20px;
+        backdrop-filter: blur(6px);
+        border: 1px solid white;
+        padding: 10px 12px;
+        border-radius: 10px;
+        pointer-events: all;
+    }
+
+    .tech_spec__interior .tech_spec__interior-btn .tech_spec__interior-text {
+        margin-right: 8px;
+    }
+
+    .tech_spec__interior .tech_spec__interior-btn .arrow-wrapper {
+        border: none;
+        background: none;
+    }
+
+
+
+
+    .auto_park .auto_park_wrapper {
+        height: auto;
+        padding: 20px 20px 40px 20px;
+    }
+
+    .auto_park .auto_park_wrapper .auto_park_slider .gallery_item img {
+        width: 140px;
+        height: 92px;
+    }
+
+    .auto_park_slider-button button.next_button, .auto_park_slider-button button.prev_button {
+        bottom: 38px !important;
     }
 }
-
-/*@media (max-width:740px) {*/
-/*    .tech_spec__description {*/
-/*        padding: 10px;*/
-/*    }*/
-/*    .tech_spec__titles, .tech_spec__outfit {*/
-/*        margin-bottom: 14px;*/
-/*    }*/
-/*}*/
